<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".controler.home"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Inicio"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/iVFotopB"
            android:layout_width="196dp"
            android:layout_height="171dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/foto"
            android:contentDescription="@string/foto"/>

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPersonName"
            android:text="@string/nameP"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPersonName"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/cel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPersonName"
            android:text="@string/celu"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPersonName"
            android:text="@string/pass"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tvGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPersonName"
            android:text="@string/genero"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tvPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPersonName"
            android:text="@string/Peso"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tvEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPersonName"
            android:text="@string/Edad"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tvEstatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPersonName"
            android:text="@string/Estatura"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEditarP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/editar"
                android:textSize="18sp"
                app:backgroundTint="#4CAF50"
                android:background="@drawable/button_rounded2"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>