<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".controler.ejercicio"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ejercicio"
            android:textColor="@color/black"
            android:textSize="30sp" />


        <ImageButton
            android:id="@+id/btnfuerza"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_margin="25dp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_rounded2"
            android:contentDescription="@string/fuerza"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/fuerza"
            android:layout_gravity="center"/>

        <ImageButton
            android:id="@+id/btncardio"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_margin="25dp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_rounded2"
            android:contentDescription="@string/cardio"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/cardio"
            android:layout_gravity="center"/>

        <ImageButton
            android:id="@+id/btnestira"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_margin="25dp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_rounded2"
            android:contentDescription="@string/flexion"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/estira"
            android:layout_gravity="center"/>

        <ImageButton
            android:id="@+id/btninfo"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_margin="25dp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_rounded2"
            android:contentDescription="@string/ver"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/info"
            android:layout_gravity="center"/>

    </LinearLayout>

</ScrollView>