<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoGeneral"
    android:background="@color/white"
    android:layout_margin="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoGene"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_margin="10dp"/>

            <ImageView
                android:id="@+id/iVFotoNP"
                android:layout_width="196dp"
                android:layout_height="171dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/info"
                android:contentDescription="@string/foto"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoG"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:layout_margin="10dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoG3"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:layout_margin="10dp"/>

            <ImageView
                android:id="@+id/iVcardio"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/cardio"
                android:contentDescription="@string/foto"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoG4"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:layout_margin="10dp"/>

            <ImageView
                android:id="@+id/iVflexibilidad"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/estira"
                android:contentDescription="@string/foto"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoG5"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:layout_margin="10dp"/>

            <ImageView
                android:id="@+id/iVpeso"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/fuerza"
                android:contentDescription="@string/foto"
                android:layout_margin="10dp"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>