<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cardio"
    android:background="@color/white"
    android:layout_margin="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cardio"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_margin="10dp"/>

            <ImageView
                android:id="@+id/iVECardio"
                android:layout_width="196dp"
                android:layout_height="171dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/foto"
                app:srcCompat="@drawable/cardio"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoC"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/btnVerC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/button_rounded2"
                android:text="@string/ver"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>